fix(ai-enrichment): Fix AI enriched data state persistence and eliminate forced background AI calls on reading loading